kubernetes/kyverno/adm-resource-limits.yml
# -- Admission policy
# Ensures all pods define container resource limits at least.
# -> This consequentially makes all pods Burstable, so beware to use Guaranteed QoS for mission-critical applications.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pod-quality-of-service
spec:
  rules:
  - name: pod-qos-limits
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
              matchExpressions:
                - key: type 
                  operator: In
                  values:
                  - "app-namespace"
    validate:
      failureAction: Enforce
      message: "All pods need to define container resource limits."
      pattern:
        spec:
          containers:
            - resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
          =(initContainers):
            - resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
          =(ephemeralContainers):
            - resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
